# TuyaOpen-T5AI

./: .gitignore  Kconfig  README.md  build_example.py  build_example.sh  build_setup.sh  default.config  platform_config.cmake  platform_prepare.py  platform_prepare.sh  toolchain_file.cmake  toolchain_get.sh
.github/workflows/: sync-to-gitee.yml
examples/ble/ble_central/: app_default.config
examples/ble/ble_peripher/: .using_config
examples/get-started/cxx/: .using_config
examples/get-started/sample_project/: .using_config
examples/graphics/lvgl_demo/: .using_config  app_default.config
examples/multimedia/audio/audio_recorder/: .using_config  app_default.config
examples/multimedia/audio/audio_speaker/: app_default.config
examples/peripherals/button/: .using_config
examples/peripherals/i2c/src/: example_i2c.c
examples/peripherals/timer/: .using_config
examples/system/os_thread/: .using_config
examples/wifi/ap/: .using_config
examples/wifi/low_power/: .using_config
t5_os/: build.sh  sdk_version.txt
t5_os/bk_idk/components/at_server/: at_task.c
t5_os/bk_idk/components/bk_bluetooth/: CMakeLists.txt  Kconfig
t5_os/bk_idk/components/bk_cli/: CMakeLists.txt  Kconfig  cli.h  cli_at.c  cli_config.h  cli_flash.c  cli_gpio.c  cli_i2s.c  cli_main.c  cli_netif.c  cli_reg.c  cli_scr.c  cli_wifi.c  shell_drv.h  shell_mailbox_cp1.c  shell_mailbox_ipc.c  shell_task.c
t5_os/bk_idk/components/bk_common/: bk_feature.c
t5_os/bk_idk/components/bk_https/: bk_https.c  bk_ssl.c
t5_os/bk_idk/components/bk_init/: bk_init.c  components_init.c
t5_os/bk_idk/components/tfm/tfm/jump/: CMakeLists.txt
t5_os/bk_idk/components/tfm/tfm/jump/src/: jump_main.c
t5_os/components/eez-framework/: CMakeLists.txt
t5_os/components/lvgl/: CMakeLists.txt  Kconfig
t5_os/components/multimedia/: CMakeLists.txt
t5_os/projects/tuya_app/: CMakeLists.txt
tools/: do_with_assets.py  download_toolchain.py  get_conutry.py  sdkconfig.h  util.py
tuyaos/tuyaos_adapter/: CMakeLists.txt  Kconfig
tuyaos/tuyaos_adapter/include/: tuya_gpio_map.h
tuyaos/tuyaos_adapter/include/adc/: tkl_adc.h
tuyaos/tuyaos_adapter/include/asr/: tkl_asr.h
tuyaos/tuyaos_adapter/include/asr/bat_asr/: bat_asr_api.h  bat_asr_type.h
tuyaos/tuyaos_adapter/include/asr/libtutuClear/: tutuClear.h
tuyaos/tuyaos_adapter/include/asr/wanson_asr/: asr.h  fst_01.h  fst_02.h  fst_types.h
tuyaos/tuyaos_adapter/include/bluetooth/: tkl_bluetooth.h  tkl_bluetooth_bredr.h  tkl_bluetooth_def.h  tkl_bluetooth_mesh_def.h  tkl_bluetooth_mesh_device.h  tkl_bluetooth_mesh_prov.h  tkl_bluetooth_sm.h
tuyaos/tuyaos_adapter/include/display/: tkl_disp_driver.h  tkl_disp_drv_lcd.h  tkl_display.h
tuyaos/tuyaos_adapter/include/hci/: tkl_hci.h
tuyaos/tuyaos_adapter/include/i2c/: tkl_i2c.h
tuyaos/tuyaos_adapter/include/init/include/: tkl_init.h  tkl_init_network.h  tkl_init_system.h  tkl_init_wifi.h  tkl_init_wired.h
tuyaos/tuyaos_adapter/include/init/src/: tkl_init_system.c  tkl_init_wifi.c
tuyaos/tuyaos_adapter/include/ipc/: tkl_ipc.h
tuyaos/tuyaos_adapter/include/lvgl/: tkl_lvgl.h
tuyaos/tuyaos_adapter/include/media/: tkl_audio.h  tkl_isp.h  tkl_video_enc.h  tkl_video_in.h
tuyaos/tuyaos_adapter/include/network/: tkl_lwip.h  tkl_network.h
tuyaos/tuyaos_adapter/include/pinmux/: tkl_pinmux.h
tuyaos/tuyaos_adapter/include/rtc/: IoTOSconfig
tuyaos/tuyaos_adapter/include/rtc/doc/: tkl_rtc.md
tuyaos/tuyaos_adapter/include/security/: tkl_asymmetrical.h
tuyaos/tuyaos_adapter/include/spi/: IoTOSconfig
tuyaos/tuyaos_adapter/include/spi/doc/: tkl_spi.md
tuyaos/tuyaos_adapter/include/spi/include/: tkl_spi.h
tuyaos/tuyaos_adapter/include/system/: tkl_fs.h  tkl_memory.h  tkl_output.h  tkl_system.h  tkl_thread.h
tuyaos/tuyaos_adapter/include/uart/: tkl_uart.h
tuyaos/tuyaos_adapter/include/utilities/include/: tuya_cloud_types.h  tuya_hashmap.h  tuya_hlist.h  tuya_ringbuf.h  tuya_slist.h  tuya_tools.h
tuyaos/tuyaos_adapter/include/utilities/src/: tuya_hashmap.c  tuya_list.c  tuya_mem_heap.c  tuya_queue.c  tuya_ringbuf.c  tuya_smartpointer.c  tuya_tools.c
tuyaos/tuyaos_adapter/include/vad/: ty_vad_app.h
tuyaos/tuyaos_adapter/include/vad/lib/: vad.h  wb_vad_c.h
tuyaos/tuyaos_adapter/include/wakeup/: IoTOSconfig
tuyaos/tuyaos_adapter/include/wakeup/doc/: tkl_wakeup.md
tuyaos/tuyaos_adapter/include/wakeup/include/: tkl_wakeup.h
tuyaos/tuyaos_adapter/include/wifi/: tkl_wifi.h
tuyaos/tuyaos_adapter/include/wired/: spi_eth_drv.h  tkl_wired.h
tuyaos/tuyaos_adapter/src/driver/: tkl_8080.c  tkl_adc.c  tkl_asr.c  tkl_audio.c  tkl_display.c  tkl_flash.c  tkl_gpio.c  tkl_hci.c  tkl_hci_0.c  tkl_hci_1.c  tkl_i2c.c  tkl_ipc.c  tkl_lwip_0.c  tkl_lwip_1.c  tkl_mic.c  tkl_pinmux.c  tkl_pwm.c  tkl_qspi.c  tkl_rgb.c  tkl_rtc.c  tkl_spi.c  tkl_uart.c  tkl_vad.c  tkl_video_enc.c  tkl_video_in.c  tkl_wakeup.c  tkl_wifi.c  tkl_wifi_0.c  tkl_wifi_1.c  tkl_wired.c
tuyaos/tuyaos_adapter/src/driver/tkl_display/: tkl_disp_drv_lcd.c  tkl_display.c  tkl_display_convert.c  tkl_display_dma2d.c  tkl_display_framebuffer.c  tkl_display_private.h  tkl_display_rotate.c
tuyaos/tuyaos_adapter/src/misc/: bk_adapter.c  dhcpserver.c  fs_init.c  qflash.c  qflash.h  sflash.c  sflash.h  tuya_tkl_ipc.c  ty_vad_app.c
tuyaos/tuyaos_adapter/src/system/: tkl_fs.c  tkl_lvgl.c  tkl_memory.c  tkl_mutex.c  tkl_network.c  tkl_ota.c  tkl_output.c  tkl_sleep.c  tkl_system.c  tkl_thread.c
tuyaos/tuyaos_adapter/src/test/: cli_tuya_test.c  cli_tuya_test.h  test_adc.c  test_gpio.c  test_lcd.c  test_littlefs.c  test_lp.c  test_media.c  test_mp3.c  test_pwm.c  test_qspi.c  test_sdcard.c  test_single_core.c  test_startup_frame.c  test_timer.c  test_usb.c  test_wifi.c
tuyaos/tuyaos_adapter/src/test/test_lvgl/: tuya_lvgl_demo.c  tuya_lvgl_demo.h
tuyaos/tuyaos_adapter/src/test/test_lvgl/stress/: lvgl_event_handle.c  lvgl_stress_demo.c
tuyaos/tuyaos_adapter/src/test/test_lvgl/widgets/: lv_demo_widgets.c  widgets_main.c
tuyaos/tuyaos_adapter/src/test/test_lvgl/widgets/assets/: img_clothes.c  img_demo_widgets_avatar.c  img_lvgl_logo.c
(+579 files in other folders)
